# tramlines-gateway

./: .dockerignore  .gitignore  CNAME  LICENSE  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.cursor/rules/: code-quality.mdc
.github/workflows/: docs.yml  test.yml
docker/: Dockerfile
docs/: index.md  reference.md
docs/dsl/: extension-reference.md  policy-reference.md  rule-reference.md  testing-reference.md  tramlines-language-reference.md
docs/getting-started/: installation.md
docs/policies/: security-policies.md
docs/stylesheets/: extra.css
src/tramlines/: cli.py  logger.py  middleware.py  proxy.py  session.py
src/tramlines/guardrail/dsl/: context.py  evaluator.py  predicates.py  rules.py  testing.py  types.py
src/tramlines/guardrail/extensions/: encoding_detector.py  pii_detector.py  prompt_detector.py  regex_detector.py
src/tramlines/guardrail/policies/: __init__.py  block_pii_in_tool_args.py  block_regex_patterns.py  github_enforce_single_repo.py  heroku_enforce_single_app.py  linear_enforce_single_team.py  linear_sentry_rules.py  neon_policies.py  notion_enforce_single_page.py  paypal_policies.py  playwright_policies.py
tests/integration/: conftest.py  test_e2e.py  test_error_handling.py  test_middleware.py  test_performance.py  test_proxy.py  test_security.py
tests/policy/: test_linear_sentry.py  test_policy_github.py  test_policy_heroku.py  test_policy_linear.py  test_policy_neon.py  test_policy_notion.py  test_policy_pii.py  test_policy_playwright.py  test_policy_regex_patterns.py
tests/unit/: test_dsl_testing_framework.py  test_evaluator.py  test_extensions.py  test_middleware.py  test_predicates.py
